--- a/index.css
+++ b/index.css
@@ -20,17 +20,6 @@ body {
   );
 }
 
-.bg-image {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-
-  height: 100%;
-  width: 100%;
-
-  z-index: -1;
-}
-
 .container {
   width: 50%;
 
@@ -54,16 +43,15 @@ body {
 }
 
 .page-title {
-  margin-top: 100px;
-  margin-bottom: 15px;
+  margin-top: 8vh;
 
   font-size: 40px;
-  font-family: PlayfairDisplay;
+  font-family: 'Playfair Display', serif;
   font-weight: normal;
 }
 
 .page-title-2 {
-  font-family: PlayfairDisplay;
+  font-family: 'Playfair Display', serif;
   font-weight: bold;
   font-size: 40px;
 }
@@ -72,9 +60,9 @@ body {
   width: 80%;
   text-wrap: balance;
   opacity: 0.6;
-  margin-top: 15px;
 
   font-size: 24px;
+  margin-top: 20px;
 }
 
 .button-support-title {
@@ -82,7 +70,7 @@ body {
   opacity: 0.25;
 }
 
-.migrate-button {
+.primary-button {
   width: 80%;
   padding: 20px 0px;
 
@@ -92,6 +80,11 @@ body {
   font-size: 24px;
 
   cursor: pointer;
+
+  color: #f2363c;
+
+  border-radius: 5px;
+  border: 0px;
 }
 
 .num-tiktokers {
@@ -120,7 +113,7 @@ body {
 
   .page-title {
     margin-top: 50px;
-    font-size: 18px;
+    font-size: 20px;
   }
 
   .page-title-2 {
@@ -138,7 +131,7 @@ body {
     flex-direction: column;
   }
 
-  .migrate-button {
+  .primary-button {
     font-size: 14px;
     padding: 15px 0px;
   }
