--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ body {
 }
 
 .container {
-  width: 50%;
+  width: 60%;
 
   display: flex;
   flex-direction: column;
@@ -32,20 +32,23 @@ body {
   height: 80px;
   width: 80px;
 
-  margin-top: 80px;
+  margin-top: 36px;
 
   cursor: pointer;
+
+  transform: translate(10px);
 }
 
 .logo-support-title {
   font-size: 14px;
-  margin-top: 15px;
-  font-family: Montserrat;
+  font-family: Lato;
   opacity: 0.74;
+
+  font-weight: normal;
 }
 
 .page-title {
-  margin-top: 8vh;
+  margin-top: 10vh;
 
   font-size: 40px;
   font-family: 'Playfair Display', serif;
@@ -54,8 +57,13 @@ body {
 
 .page-title-2 {
   font-family: 'Playfair Display', serif;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 40px;
+}
+
+.tiktok-icon {
+  height: 30px;
+  margin-right: -5px;
 }
 
 .subtitle {
@@ -64,21 +72,29 @@ body {
   opacity: 0.6;
 
   font-size: 24px;
-  margin-top: 20px;
+  margin-top: 36px;
+
+  font-weight: normal;
 }
 
 .button-support-title {
-  margin-bottom: 10px;
+  margin-top: 36px;
+  margin-bottom: 18px;
   opacity: 0.25;
 }
 
+.button-support-title--mobile {
+  display: none;
+}
+
 .primary-button {
-  width: 80%;
+  width: 55%;
   padding: 20px 0px;
 
   /* margin-top: 100px; */
 
-  font-family: Montserrat;
+  font-family: Lato;
+  font-weight: 700;
   font-size: 24px;
 
   cursor: pointer;
@@ -105,6 +121,20 @@ body {
   width: 50%;
 }
 
+.handle-prefix {
+  position: absolute;
+  z-index: 2;
+  left: 10px;
+  color: black;
+  font-size: 18px;
+}
+
+.profile-link {
+  margin-top: 15px;
+  color: #f2363c;
+  text-decoration: none;
+}
+
 @media (max-width: 600px) {
   .container,
   .footer {
@@ -116,12 +146,12 @@ body {
   }
 
   .page-title {
-    margin-top: 50px;
-    font-size: 20px;
+    margin-top: 72px;
+    font-size: 24px;
   }
 
   .page-title-2 {
-    font-size: 20px;
+    font-size: 24px;
   }
 
   .subtitle {
@@ -135,9 +165,26 @@ body {
     flex-direction: column;
   }
 
+  .profile-handles {
+    font-size: 12px;
+  }
+
   .primary-button {
-    font-size: 14px;
+    font-size: 16px;
     padding: 15px 0px;
+  }
+
+  .tiktok-icon {
+    height: 20px;
+  }
+
+  .button-support-title--desktop {
+    display: none;
+  }
+
+  .button-support-title--mobile {
+    display: unset;
+    font-size: 10px;
   }
 
   .num-tiktokers {
@@ -152,7 +199,7 @@ body {
   }
 
   .page-title {
-    margin-top: 20px;
+    margin-top: 40px;
   }
 }
 
